<resources>
    <string name="app_name">Hands On Dining</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_name">이진호</string>
    <string name="nav_header_id">kartmon</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="main_dining_name">꼬꼬네 치킨집</string>
    <string name="main_dining_name2">햄버거의 햄버거집</string>
    <string name="main_dining_name3">라면이의 라면집</string>
    <string name="stars">4.1</string>
    <string name="review_number">3</string>

    <string name="dining_open">11:00~21:00</string>
    <string name="dining_intro">맛집으로 소문난 곳입니다.</string>


    <string name="menu_reserve_shop">내가 예약한 가게</string>
    <string name="menu_coupon">쿠폰함</string>
    <string name="menu_shopping_cart">장바구니</string>
    <string name="menu_my_shopping">주문내역</string>
    <string name="menu_announcement">공지사항</string>
    <string name="menu_my_review">리뷰관리</string>
    <string name="menu_event">이벤트</string>
    <string name="menu_config">환경설정</string>

    <string name="market_address">인천 미추홀구 인하로 100 56</string>
    <string name="market_openTime">매일 11:30~21:30 | Break Time 15:00~18:00 | 일요일 휴무</string>
    <string name="market_menu">선식 -점심한정 (30,000원), 원식 (45,000원), 마음식 (65,000원), 희식 (95,000원)</string>
    <string name="market_number">032-860-7114</string>

    <string name="market_res">최소 두명부터 예약 손님 받습니다</string>
    <string name="market_business">대표자명:\n상호명:\n사업자주소:\n사업자등록번호:\n</string>

    <string name="menu1">찜햇닭 - 18000원</string>
    <string name="menu2">찜햇닭 강정 - 18000원</string>
    <string name="menu3">찜햇닭 윙 - 19000원</string>
    <string name="menu4">치파오 치킨 - 20000원</string>
    <string name="menu5">콜라 - 1000원</string>
    <string name="menu6">사이다 - 1200원</string>

    <string name="shop_comment_id">아이디 입력 부분</string>
    <string name="shop_comment_time">작성 시간</string>
    <string name="shop_comment_rating">4.1</string>
    <string name="shop_comment_content">내용 입력 부분</string>

    <string name="id1">깐블리</string>
    <string name="content1">오랜만에 먹었는데 존맛탱!! 반찬들도 맘에 들어용</string>

    <string name="id2">공궁망</string>
    <string name="content2">예약해서 바로 가서 먹을 수 있어서 좋았어요</string>

    <string name="id3">낭낭이</string>
    <string name="content3">국물이 진짜 진하고 맛있네용!!!! 특히 반찬 더 주실수 있냐고 요청사항에 적었더니 푸짐하게 주셨어요</string>
</resources>
