<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView_menu1"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/menu1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/menu1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_menu1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="장바구니 담기"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView_menu2"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/menu2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/menu2"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_menu2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="장바구니 담기"
                android:textStyle="bold"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/imageView_menu3"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/menu3" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/menu3"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_menu3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="장바구니 담기"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/imageView_menu4"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/menu4" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/menu4"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_menu4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="장바구니 담기"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView_menu5"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/menu5" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/menu5"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_menu5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="장바구니 담기"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView_menu6"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/menu6" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/menu6"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_menu6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="장바구니 담기"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>