<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="가게 소개"
                android:textSize="30dp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divideView"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="?attr/colorButtonNormal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="주소"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView_address1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/textView_address"
                        android:paddingLeft="5dp"
                        android:text="@string/market_address"
                        android:textSize="20sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView_openTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="영업시간"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView_openTime1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/textView_openTime"
                        android:paddingLeft="5dp"
                        android:text="@string/market_openTime"
                        android:textSize="20sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView_menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="메뉴"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView_menu1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/textView_menu"
                        android:paddingLeft="5dp"
                        android:text="@string/market_menu"
                        android:textSize="20sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/textView_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="전화번호"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView_phone1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/textView_phone"
                        android:paddingLeft="5dp"
                        android:text="@string/market_number"
                        android:textSize="20sp" />
                </RelativeLayout>
            </LinearLayout>

            <View
                android:id="@+id/divideView2"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="?attr/colorButtonNormal" />
            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="예약 주문 안내"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/market_res"
                android:textSize="25dp" />

            <View
                android:id="@+id/divideView3"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="?attr/colorButtonNormal" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="사업자 정보"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/market_business"
                android:textSize="25dp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>





</FrameLayout>