<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--원형 이미지 생성-->
    <de.hdodenhof.circleimageview.CircleImageView

        android:id="@+id/Img_CommentId"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/user1"
        app:civ_border_width="2dp"
        app:civ_circle_background_color="#FFCCCCCC"
        />

    <!--리니어 레이아웃 댓글 정보 모음-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TextView_CommentId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_comment_id"
            android:textColor="@color/color_comment_item_text"
            android:textSize="15sp"
            android:textStyle="bold" />


        <!--상대레이아웃 (댓글 작성 시간과 평점)-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_commentTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shop_comment_time"
                android:textColor="#FFCCCCCC"
                android:textSize="10sp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/ratingBar_commentWrite"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:layout_toRightOf="@+id/textView_commentTime"
                android:numStars="5"
                android:rating="@string/shop_comment_rating"
                android:stepSize="0.1" />


        </RelativeLayout>


        <TextView
            android:id="@+id/textView_commentContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/shop_comment_content"
            android:textColor="@color/color_comment_item_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!--상대 레이아웃 댓글 내용 하단 부분-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_commentRecommend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="추천"
                android:textColor="@color/color_comment_item_text"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_commentRecommendCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_toRightOf="@+id/textView_commentRecommend"
                android:text="0"
                android:textColor="@color/color_comment_item_text"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/textView_commentRecommendCount"
                android:text="|" />

            <TextView
                android:id="@+id/textView_calling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/textView_bar"
                android:text="신고하기"
                android:textColor="#FFCCCCCC"
                android:textSize="10sp" />

        </RelativeLayout>

    </LinearLayout>



</LinearLayout>